# matrix

./: .appveyor.yml  .codecov.yml  .travis.yml  CMakeLists.txt  README.md  conanfile.txt
modules/libmatrix/: CMakeLists.txt
modules/libmatrix/include/matrix/: Matrix.h
modules/libmatrix/src/: Matrix.inl
modules/matrix/: CMakeLists.txt
modules/matrix/src/: Matrix.cpp
scripts/: build-gcc-x64-release  build-msvc15-x64-release.cmd  cmakegen-msvc15-x64-debug.cmd
tests/: CMakeLists.txt  MatrixTests.cpp
